# Graph-of-Counterfactual-Thought

./: .env  README.md  pyproject.toml
configs/: default.yaml
data/: cycb_candidates.jsonl  cycb_synth.csv  cycb_synth.jsonl  cycb_toy.jsonl  cycb_v1.jsonl  cycb_v50.jsonl
results/: deepseek_eval_log_deepseek-chat.jsonl  per_perturbation_claude_claude-sonnet-4-5-20250929.csv  per_perturbation_deepseek_deepseek-reasoner.csv  per_perturbation_gemini_gemini-2.5-flash-lite.csv  per_perturbation_openai_gpt-4.1.csv  per_perturbation_openai_gpt-4o-mini.csv  per_perturbation_openai_gpt-4o.csv  table_metrics_claude_claude-sonnet-4-5-20250929.csv  table_metrics_deepseek_deepseek-chat.csv  table_metrics_deepseek_deepseek-reasoner.csv  table_metrics_gemini_gemini-2.5-flash-lite.csv  table_metrics_openai_gpt-4.1.csv  table_metrics_openai_gpt-4o-mini.csv  table_metrics_openai_gpt-4o.csv  tables_openai.tex
results/demo/: claude_eval_log_claude-sonnet-4-5-20250929.jsonl  (+23 more)
scripts/: step0_generate_synth_cycb.py  step0b_validate_counterfactuals.py  step1_validate_and_stats.py  step2_run_mock_eval.py  step3_run_mock_eval_full.py  step4_run_openai_eval.py  step4b_run_openai_eval_gpt4o.py  step4b_run_openai_eval_robust.py  step4b_run_openai_eval_with_log_gpt41.py  step4b_run_openai_eval_with_log_gpt4o.py  step4c_run_deepseek_eval.py  step4d_run_ollama_eval.py  step4e_run_claude_eval.py  step4f_run_gemini_eval.py  step5_expand_with_openai.py  step5_generate_cycb_v1_seed.py  step5_merge_v1_and_candidates.py  step5_validate_candidates.py  step6_make_latex_tables.py
src/: __init__.py
(+19 files in other folders)
